infra/k8s/workspace-mail/base/deployment-smtp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspace-smtp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workspace-smtp
  template:
    metadata:
      labels:
        app: workspace-smtp
    spec:
      imagePullSecrets:
        - name: zot-pull
      containers:
        - name: postfix
          image: registry.socioprophet.ai/workspace-smtp:sha-8f1bb2f5d6d4d9577113887bbfb79ce8305782b3
          ports:
            - name: smtp
              containerPort: 25
            - name: submission
              containerPort: 587
          readinessProbe:
            tcpSocket:
              port: 25
            initialDelaySeconds: 5
            periodSeconds: 10
